--- a/index.html
+++ b/index.html
@@ -60,6 +60,34 @@
       <p>Remember, the AI is here to help you manage your notes. Don't hesitate to ask it for help or clarification.</p>
     </div>
   </div>
+<script>
+
+// Get the modal
+var modal = document.getElementById("how-to-modal");
+
+// Get the button that opens the modal```javascript
+var btn = document.getElementById("how-to-button");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+  </script>
 
 </body>
 
