--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p>6. Export your notes: Click the "Export Notes" button to download a JSON file with all your notes.</p>
       <p>7. Import notes: Click the "Import Notes" button and select a JSON file to load notes from that file.</p>
       <p>9. Delete the chat log: Click the "Delete Chat Log" button to clear the chat history.</p>
-      <p>Remember, the AI is here to help you manage your notes. Don't hesitate to ask it for help or clarification.</p>
+      <p>Remember, the AI is here to help you manage your notes. Don't hesitate to ask it for help or clarification. All notes are saved to local storage which means your notes will be saved even if you close or restart the page.</p>
     </div>
   </div>
 <script>
