--- a/index.html
+++ b/index.html
@@ -98,5 +98,12 @@ document.getElementById('chat-input').addEventListener('keypress', function(e) {
   </script>
 
 </body>
+  
+<div id="mobile-message">
+  <h2>Welcome to NoteGPT!</h2>
+  <p>We're sorry for the inconvenience, but NoteGPT is currently optimized for desktop use and may not function as expected on mobile devices.</p>
+  <p>We're working hard to bring you a mobile-optimized version soon. In the meantime, please use a desktop computer for the best experience.</p>
+  <p>Thank you for your understanding!</p>
+</div>
 
 </html>
