--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@ document.getElementById('chat-input').addEventListener('keypress', function(e) {
   
 <div id="mobile-message">
   <h2>Welcome to NoteGPT!</h2>
-  <p>We're sorry for the inconvenience, but NoteGPT is currently optimized for desktop use and may not function as expected on mobile devices.</p>
-  <p>We're working hard to bring you a mobile-optimized version soon. In the meantime, please use a desktop computer for the best experience.</p>
-  <p>Thank you for your understanding!</p>
+  <p>NoteGPT is currently optimized for desktop use and does not function as expected on mobile devices.</p>
+  <p>A mobile-optimized version is coming soon. In the meantime, please use a desktop computer.</p>
 </div>
 
 </html>
