--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NoteGPT</title>
+  <title>NoteLM</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script> 
 </head>
@@ -21,7 +21,7 @@
         <input type="file" id="file-input" style="display: none;" onchange="handleFileSelect(event)" />
       </div>
       <div id="note-form">
-        <div id="title">NoteGPT v1.3</div>
+        <div id="title">NoteLM v1.8</div>
         <div id="desc"></div>
         <button id="how-to-button">How to use</button>
       </div>
