--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div id="how-to-modal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>How to use NoteGPT</h2>
+      <h2>How to use NoteLM</h2>
       <p>1. Ask the AI a question: Type your question or command in the text area at the bottom of the page and press the "Ask" button or hit Enter.</p>
       <p>2. Add a note: Simply ask the AI to remember something for you. For example, you can say "Remember that my bike is blue". The AI will create a note with this information.</p>
       <p>3. Edit a note: Ask the AI to change a note. For example, you can say "Change the note about my bike to say that it's red". The AI will update the note with the new information.</p>
@@ -101,7 +101,7 @@ document.getElementById('chat-input').addEventListener('keypress', function(e) {
   
 <div id="mobile-message">
   <h2>Welcome to NoteGPT!</h2>
-  <p>NoteGPT is currently optimized for desktop use and does not function as expected on mobile devices.</p>
+  <p>NoteLM is currently optimized for desktop use and does not function as expected on mobile devices.</p>
   <p>A mobile-optimized version is coming soon. In the meantime, please use a desktop computer.</p>
 </div>
 
